# arduino-as-component

./: .gitmodules  README.md
adafruit_ili9341/: sdkconfig
adafruit_ili9341/components/Adafruit_GFX/: Adafruit_GFX.h  CMakeLists.txt
adafruit_ili9341/components/Adafruit_ILI9341/: CMakeLists.txt
adafruit_ili9341/main/: main.cpp
tinyusb/components/EspTinyUSB/: CMakeLists.txt  cdcdevice.cpp  cdcusb.h  esptinyusb.cpp  esptinyusb.h  msc_disk.c  mscusb.cpp  mscusb.h  tusb_config.h  usb_descriptors.cpp  webusb.cpp  webusb.h
tinyusb/main/: main.cpp
